--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,13 +3,12 @@
     <div class="col-8 offset-3">
 
 
-    <h3>Listing Details :</h3>
+    <h3> <b><%= listing.title %></b></h3>
     </div>
     <div class="card col-6 offset-3 show-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
           <p class="card-text">
-            <b><%= listing.title %></b><br>
             <%= listing.description %><br>
             &#8377; <%= listing.price.toLocaleString("en-IN") %><br>
             <%= listing.location %><br>
@@ -30,6 +29,21 @@
         </form>
 
     </div>
+<div  class="col-8 offset-3">
+  <hr>
+  <h4>Leave a Review</h4>
+  <form>
+    <div class="mb-3 mt-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" min=0 max=5 id="rating" name="review[rating]" class="form-range">
+    </div>
+    <div class="mb-3 mt-3">
+      <label for="comment" class="form-label">Comments</label>
+      <textarea name="review[comment]" id= "comment" cols="30" rows="5" class="form-control"></textarea>
+    </div>
+    <button class="btn btn-outline-dark mb-3">Submit</button>
+  </form>
+</div>
    
 </div>
 
