Delete and Handling Reviews

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -55,8 +55,15 @@
     <div class="card-body">
       <h5 class="card-title"><b>Jane Doe</b></h5>
       <p class="card-text"><%=review.comment %></p>
+  
       <p class="card-text"><%= review.rating %> stars</p>
+      
     </div>
+   
+    <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+      <br>
+      <button class="btn btn-sm btn-dark">Delete</button>
+    </form>
     </div>
      <% }%>
     </div>
