--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -15,7 +15,7 @@
 
     <div class="mb-3">
         <br>
-        <label for="password" class="form-label">Passwordl</label>
+        <label for="password" class="form-label">Password</label>
         <input name="password" id="password" type="password" class="form-control" required/>
         
     </div>
