--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -21,6 +21,10 @@
 
 
     <br />
+
+
+
+    <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3">Edit</a>
         
@@ -29,6 +33,11 @@
         </form>
 
     </div>
+    <% } %>
+
+
+
+
 <div  class="col-8 offset-3">
   <hr>
   <h4>Leave a Review</h4>
