created authorization for reviews

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -24,7 +24,7 @@
 
 
 
-    
+    <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3">Edit</a>
         
@@ -33,13 +33,10 @@
         </form>
 
     </div>
-
-
-
-
+<% } %>
 
 <div  class="col-8 offset-3">
-  <hr>
+  <% if(currUser) {%>
   <h4>Leave a Review</h4>
   <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
     <div class="mb-3 mt-3">
@@ -55,6 +52,7 @@
     </div>
     <button class="btn btn-outline-dark mb-3">Submit</button>
   </form>
+  <% } %>
   <hr>
 
  <p><b>All Reviews</b></p> 
@@ -62,7 +60,7 @@
   <% for(review of listing.reviews){ %>
     <div class="card col-5 ms-3 mb-3">
     <div class="card-body">
-      <h5 class="card-title"><b>Jane Doe</b></h5>
+      <h5 class="card-title"><b>@<%= review.author.username %></b></h5>
       <p class="card-text"><%=review.comment %></p>
   
       <p class="card-text"><%= review.rating %> stars</p>
