--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,7 +12,7 @@
             <div class="card col listing-card">
         
         
-                <img src=  " <%= listing.image %> "class="card-img-top" alt="listing_image" style="height: 20rem;">
+                <img src=  " <%= listing.image.url %> "class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-img-overlay"></div>
                  
 
