--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,10 +4,10 @@
     
     <h3>Edit your Listing</h3>
     <br>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required/>
+            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control"  required/>
             <div class="valid-feedback">Title looks good!</div>
         </div>
 
@@ -24,8 +24,8 @@
       
         <div class="mb-3">
 
-            <label for="image" class="form-label">Image Link</label>
-            <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required/>
+            <label for="image" class="form-label"> Upload New Image </label>
+            <input name="listing[image]"  type="file" class="form-control" />
             <div class="invalid-feedback">Image link should be valid</div>
         </div>
     
