Created Image preview for edit page

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -23,6 +23,11 @@
      
       
         <div class="mb-3">
+          Original Listing Image <br>
+          <img src="<%= originalImageUrl %>" height="150" width="250">
+      </div>
+
+        <div class="mb-3">
 
             <label for="image" class="form-label"> Upload New Image </label>
             <input name="listing[image]"  type="file" class="form-control" />
