Map Marker created

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,9 @@
 <% layout("/layouts/boilerplate") -%>
+
+<script>
+  const mapToken= "<%= process.env.MAP_TOKEN %>";
+ const coords= "<%- JSON.stringify(listing.geometry.coordinates )%>";
+</script>
 <div class="row mt-3">
     <div class="col-8 offset-3">
 
@@ -98,15 +103,4 @@
   <div id="map"></div>
   </div>
 </div>
-
-
-<script>
-  let mapToken= "<%= process.env.MAP_TOKEN %>";
-  console.log(mapToken);
-	mapboxgl.accessToken = mapToken;
-    const map = new mapboxgl.Map({
-        container: 'map', // container ID
-        center: [77.2088,28.6139], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 9 // starting zoom
-    });
-</script>
+<script src="/js/map.js"></script>
