--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -59,6 +59,12 @@
         <div><i class="fa-solid fa-snowflake"></i></div>
        <p>Arctic</p>
       </div>
+      <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+        </div>
+      </div>
     </div>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for(let listing of allListings) { %>
@@ -87,3 +93,9 @@
       <% } %>
     </ul> -->
   
+<script>
+  let taxSwitch= document.getElementById("flexSwitchCheckDefault");
+  taxSwitch.addEventListener("click",()=>{
+    console.log("clicked");
+  })
+</script>
