--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,6 +5,7 @@
   #filters{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
   }
   .filter{
     text-align: center;
@@ -18,6 +19,19 @@
   }
   .filter p{
     font-size: 0.8rem;
+  }
+  .tax-info{
+    display:none;
+
+  }
+  .tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3rem;
+    padding: 1rem;
+    margin-left: 5rem;
+    display: flex;
+    align-items: center;
   }
 </style>
          
@@ -59,6 +73,14 @@
         <div><i class="fa-solid fa-snowflake"></i></div>
        <p>Arctic</p>
       </div>
+      <div class="filter">
+        <div><i class="fa-solid fa-igloo"></i></div>
+       <p>Domes</p>
+      </div>
+      <div class="filter">
+        <div><i class="fa-solid fa-sailboat"></i></div>
+       <p>Boats</p>
+      </div>
       <div class="tax-toggle">
         <div class="form-check-reverse form-switch">
           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -80,6 +102,7 @@
                   <p class="card-text"> 
                   <b> <%= listing.title %></b> <br>
                     &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+                    <i class="tax-info">&nbsp; &nbsp;+18% GST</i>
                 </p>
                 </div>
               </div>
@@ -96,6 +119,13 @@
 <script>
   let taxSwitch= document.getElementById("flexSwitchCheckDefault");
   taxSwitch.addEventListener("click",()=>{
-    console.log("clicked");
+  let taxInfo = document.getElementsByClassName("tax-info");
+  for(info of taxInfo){
+   if(info.style.display !="inline"){
+    info.style.display="inline";
+   }else{
+    info.style.display="none";
+   }
+  }
   })
 </script>
